# directory-annotator-storage

./: .flaskenv  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  settings_example.cfg  tox.ini
directory_annotator_storage/: __init__.py  backend_annotations.py  backend_documents.py  constants_config.py  directories.py  health_check.py  path_utils.py
docker/: .env-sample-local  deploy-debian-stable.dockerfile  docker-compose.yml  settings.cfg  stack-compose.yml  test_autofetch.dockerfile
scripts/: sort_entries.py
tests/: conftest.py  test_api.py  test_app_config.py  test_backends.py
